--- a/MaldoActivity/src/.vscode/settings.json
+++ b/MaldoActivity/src/.vscode/settings.json
@@ -1,11 +1,4 @@
 {
-  "java.project.sourcePaths": [
-    "src"
-  ],
-  "java.project.outputPath": "bin",
-  "java.project.referencedLibraries": [
-    "lib/**/*.jar"
-  ],
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
@@ -62,8 +55,5 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "files.associations": {
-    "stdio.h": "c"
-  }
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
